--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
     "bootswatch": "^4.5.3",
+    "moment": "^2.29.1",
     "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
+    "react-datetime": "^3.0.4",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
