--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "shortid": "^2.2.16",
     "yup": "^0.29.3"
   },
   "scripts": {
